--- a/_sass/pages/_front-page.scss
+++ b/_sass/pages/_front-page.scss
@@ -4,7 +4,7 @@
 
 $medium-down: "#{$screen} and (max-width:#{upper-bound($medium-range)})" !default;
 
-#content { 
+#content {
   @media #{$medium-down} {
     padding: 80px 0px;
   }
@@ -27,6 +27,7 @@ $medium-down: "#{$screen} and (max-width:#{upper-bound($medium-range)})" !defaul
     font-size: 1.2rem;
     margin: -1.7em 0 0 0;
     position: relative;
+    overflow: hidden;
     i, em {
       color: rgba(255,255,255,0.75);
       background-color: $dd-blue-dark;
